website/kubes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  namespace: default
  labels:
    app: wordpress
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: default
  labels:
    app: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
    tier: frontend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30336
