website/kubes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
  namespace: default
spec:
  rules:
    - host: barjaktarov.local
      http:
        paths:
          - backend:
              serviceName: wordpress
              servicePort: 80
